--- a/assets/css/setup.css
+++ b/assets/css/setup.css
@@ -388,7 +388,7 @@ p + .cta-btn {
     opacity: 1;
   }
 }
-.oh {
+.hid {
   overflow: hidden;
 }
 .div-scroll {
@@ -418,6 +418,9 @@ p + .cta-btn {
 }
 .flipX {
   transform: scaleX(-1);
+}
+canvas {
+  pointer-events: none;
 }
 
 @media (min-width: 769px) and (max-width: 1200px) {
